# onvif

./: .gitignore  CMakeLists.txt  README.md
demo/: onvif_demo.cpp
src/: onvif.cpp  onvif.h
